# lendx

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  DID_INTEGRATION_README.md  LICENSE  QA_TEST_REPORT.md  README.md  SPEC_ALIGNMENT.md  package-lock.json  pyproject.toml  pytest.ini
.autonomous/: RESOURCES.md  architecture_summary.txt  state.json
.claude/: settings.json
.claude/commands/: feature.md  status.md
@backend/src/: index.ts
backend/: SECURITY.md
backend/api/: auth.py  main.py  xumm.py
backend/config/: database.py
backend/docs/: AUTHENTICATION_DESIGN.md  README.md  RLS_POLICIES.md  SECURITY_ROADMAP.md
backend/graph/: cycles.py
backend/migrations/: 001_initial_schema.sql
backend/models/: database.py  mpt_schemas.py
backend/services/: __init__.py  did_service.py  mpt_service.py  settlement.py  xumm_service.py
backend/tests/: README.md  conftest.py  test_api.py  test_applications.py  test_auth.py  test_database.py  test_did_service.py  test_did_simple.py  test_did_standalone.py  test_e2e_mvp.py  test_loans.py  test_mpt_schemas.py  test_pool_integration.py  test_pools.py  test_rlusd.py  test_users.py
backend/xrpl_client/: __init__.py  escrow.py  mpt.py  multisig.py  rlusd.py
client/: .env  index.html  package-lock.json  package.json  tailwind.config.cjs
client/src/: App.tsx  index.css  types.ts
docs/: DATABASE_SETUP_SUMMARY.md  DEVELOPMENT.md  GITHUB_SETUP.md  MPT.md  SPEC_ALIGNMENT.md
frontend/: .env.local.example  mock.json  package-lock.json  package.json
src/: __init__.py
(+73 files in other folders)
