[project]
name = "calhacks"
version = "0.1.0"
description = "Python utilities for XRPL settlement graph logic."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "xrpl-py",
    "fastapi",
    "uvicorn",
    "pydantic",
    "pytest",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
